2003-03-22  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* cons.handler.c (set_attr) [__FreeBSD__]: Fix compilation.
	Reported by Dmitry Alexeyev <dmi_a@qnx.org.ru>.

2003-03-22  Adam Byrtek  <alpha@debian.org>

	* command.c (enter): Check subshell state early and return if
	inactive before clearing the command line.
	* main.c (force_subshell_execution): Remove magic, unusable,
	undocumented command line option "-r".

	* subshell.c: Remove dead code (SYNC_PTY_SIDES).
	(init_subshell_child): Remove dead code (initfile for TCSH).
	(init_subshell): Use ZSH_VERSION environment variable to detect
	ZSH.  Use -g option to zsh to hide entries beginning with space
	from history.  Add space before ZSH precmd to hide it.

2003-03-21  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* view.c (get_line_at): Return unreversed line for backward
	search to restore backward regexp search feature.
	(icase_search_p): Fix for the above.
	Reported by Adam Byrtek <alpha@debian.org>

2003-03-19  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* view.c (icase_search_p): Add backward search support.
	(search): Likewise.
	(block_search): Likewise.
	(normal_search): Add "Backwards" button.
	(get_line_at): Handle view->direction properly and return
	reversed string if backward search required.

2003-03-14  Pavel Roskin  <proski@gnu.org>

	* key.c (xterm_key_defines): Add more sequences for xterm, rxvt
	and konsole.

2003-03-11  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* key.c: Use fputs() instead of fprintf().
	(func_XOpenDisplay) [HAVE_GMODULE]: Move to init_key_x11().
	(get_modifier) [__QNXNTO__]: Use g_snprintf() instead of unsafe
	sprintf().

2003-03-10  Pavel Roskin  <proski@gnu.org>

	* key.c (correct_key_code): Convert unrecognized 0177, Ctrl-h
	and Ctrl-d into Delete and Backspace.  Remove all references to
	those keys in other files.

	* key.c (get_modifier) [__QNXNTO__]: Remove incorrect check for
	the existance of libph.so.1.

2003-03-10  Dmitry Alexeyev  <dmi_a@qnx.org.ru>
